--- a/.github/workflows/docker-m.yml
+++ b/.github/workflows/docker-m.yml
@@ -31,5 +31,5 @@ jobs:
         with:
           context: .
           push: true
-          platforms: linux/amd64,linux/arm64,linux/386,linux/arm/v6,linux/arm/v7
+          platforms: linux/arm64
           tags: mimimimimimimiiii/youyouapi:latest
